[gd_scene load_steps=9 format=3 uid="uid://mgtngvkxdo6v"]

[ext_resource type="Script" path="res://towers/stinger/stinger.gd" id="1_dnuip"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7xd0u"]
bg_color = Color(0, 0.6, 0.701961, 0.419608)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="RectangleShape2D" id="RectangleShape2D_louvt"]
size = Vector2(40, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_a4do6"]
radius = 150.0

[sub_resource type="Animation" id="Animation_8qfcp"]
resource_name = "LShoot"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture/Guns/LGun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-16, -36), Vector2(-16, -26), Vector2(-16, -36)]
}

[sub_resource type="Animation" id="Animation_l3lmk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture/Guns/RGun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture/Guns/LGun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, -32)]
}

[sub_resource type="Animation" id="Animation_b14a8"]
resource_name = "RShoot"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture/Guns/RGun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6, -36), Vector2(6, -26), Vector2(6, -36)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_phlut"]
_data = {
"LShoot": SubResource("Animation_8qfcp"),
"RESET": SubResource("Animation_l3lmk"),
"RShoot": SubResource("Animation_b14a8")
}

[node name="Stinger" type="CharacterBody2D" groups=["Tower"]]
collision_layer = 0
script = ExtResource("1_dnuip")

[node name="RangeIndicator" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(300, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7xd0u")

[node name="Texture" type="Node2D" parent="."]

[node name="Body" type="ColorRect" parent="Texture"]
custom_minimum_size = Vector2(40, 40)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.356863, 0, 0.894118, 1)

[node name="Guns" type="Node2D" parent="Texture"]

[node name="LGun" type="ColorRect" parent="Texture/Guns"]
offset_left = -16.0
offset_top = -32.0
offset_right = -6.0
offset_bottom = -8.0
color = Color(0.215902, 0.215902, 0.215902, 1)

[node name="RGun" type="ColorRect" parent="Texture/Guns"]
offset_left = 6.0
offset_top = -32.0
offset_right = 16.0
offset_bottom = -8.0
color = Color(0.215902, 0.215902, 0.215902, 1)

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_louvt")

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="Collider" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_a4do6")

[node name="Ray" type="RayCast2D" parent="."]
collision_mask = 4

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_phlut")
}

[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
